--- a/app/views/layouts/_navbar.html.erb
+++ b/app/views/layouts/_navbar.html.erb
@@ -1,5 +1,6 @@
 <nav class="navbar navbar-expand-lg navbar-dark bg-primary">
-  <a class="navbar-brand" href="#">Noémie photo</a>
+  <%= link_to "Noémie Photo", root_path, class: "navbar-brand" %>
+
   <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarColor01" aria-controls="navbarColor01" aria-expanded="false" aria-label="Toggle navigation">
     <span class="navbar-toggler-icon"></span>
   </button>
@@ -7,21 +8,20 @@
   <div class="collapse navbar-collapse" id="navbarColor01">
     <ul class="navbar-nav mr-auto">
       <li class="nav-item active">
-        <a class="nav-link" href="#">Qui suis-je ? <span class="sr-only">(current)</span></a>
+
+        <%= link_to "Qui suis-je ?", static_pages_about_me_path, class: "nav-link" %>
       </li>
       <li class="nav-item">
-        <a class="nav-link" href="#">Espace pro</a>
+        <%= link_to "Espace Pro", static_pages_espace_pro_path, class: "nav-link" %>
+
       </li>
       <li class="nav-item">
-        <a class="nav-link" href="#">Expo</a>
+        <%= link_to "Expo", static_pages_expo_path, class: "nav-link" %>
       </li>
       <li class="nav-item">
-        <a class="nav-link" href="#">Mes cours</a>
+        <%= link_to "Ateliers photo", static_pages_courses_path, class: "nav-link" %>
       </li>
     </ul>
-    <form class="form-inline my-2 my-lg-0">
-      <input class="form-control mr-sm-2" type="text" placeholder="Search">
-      <button class="btn btn-secondary my-2 my-sm-0" type="submit">Search</button>
-    </form>
+
   </div>
 </nav>
