--- a/app/views/static_pages/courses.html.erb
+++ b/app/views/static_pages/courses.html.erb
@@ -1,28 +1,37 @@
 <div class="div container">
 	<div class="row">
+		<div class="col col-12">
 	<h1>COURS ET ATELIERS
 </h1>
-<p>Cours particulier ou à deux. A partir de 16 ans, venez découvrir l’expérience du développement photographique. Ateliers Les ateliers, à destination des enfants peuvent être mis en place dans les écoles, MJC, centre sociaux ou toutes autres formes d’associations.</p>
+<div class="card">
+  <div class="card-body">
+    <p>Cours particulier ou à deux. A partir de 16 ans, venez découvrir l’expérience du développement photographique. Ateliers Les ateliers, à destination des enfants peuvent être mis en place dans les écoles, MJC, centre sociaux ou toutes autres formes d’associations.</p>
+  </div>
+</div>
+</div>	
+
 </div>
 	<div class="row">
 		<div class="col col-6">
-			<p>Éducation à la lecture d’image 
+			 
 
-Description
+<div class="card">
+	<div class="card-title"></div>
+	<p>Éducation à la lecture d’image</p>
+  <div class="card-body">
+	Comme son nom l’indique, cet atelier sera l’occasion d’aborder la manière d’appréhender toutes les images du quotidien. Pouvant s’adresser à tous les âges, cet atelier sera adapté en fonction de l’âge des participants. Il pourra se traduire par des minis jeux (classer des images par chronologie ou type d’image, trouver le titre de l’image...) ou échanges d’avis sur l’interprétation d’images publicitaires, de presse, de vidéos ou de dessins. L’atelier peut se terminer par une balade photographique, les enfants prennent des photos avec un appareil jetable, puis mini expo de leurs travaux à la fin de la semaine. 
 
-Comme son nom l’indique, cet atelier sera l’occasion d’aborder la manière d’appréhender toutes les images du quotidien. Pouvant s’adresser à tous les âges, cet atelier sera adapté en fonction de l’âge des participants. Il pourra se traduire par des minis jeux (classer des images par chronologie ou type d’image, trouver le titre de l’image...) ou échanges d’avis sur l’interprétation d’images publicitaires, de presse, de vidéos ou de dessins. L’atelier peut se terminer par une balade photographique, les enfants prennent des photos avec un appareil jetable, puis mini expo de leurs travaux à la fin de la semaine. 
-
-
-Intervenant
-Noémie Blumet
-
-
-Infos
 
 Public Cible
 Enfants entre 6 et 12 ans</p>
+  </div>
+</div>
+
+
 		</div>
 		<div class="col col-6">
+			<div class="card">
+				<div class="card-body"></div>
 			<p>
 				Nombre de personnes
 1 intervenant pour 15 enfants
@@ -33,13 +42,16 @@ Environ 2h
 100€
 			</p>
 		</div>
+			</div>
 	</div>
 	<div class="row">
 		<div class="col col-6">
+			<div class="card">
+				<div class="card-body">
 			<p>
-				Créer un appareil de visée 
+				<div class="card-title">Créer un appareil de visée</div> 
 
-Description
+
 
 Apprendre aux enfants à fabriquer un petit appareil de visée en carton, permettant de simuler l’appareil photo avant de tester de vrais appareils compacts. Ce sera aussi l’occasion d’un échange avec eux pour comprendre le principe de photographier et de cadrer pour obtenir une image.
  
@@ -48,7 +60,11 @@ De 3 à 5 ans les enfants fabriquent à l’aide de carton, 
 De 6 à 10 ans les enfants vont fabriquer de petits appareils photos fonctionnels en papier à l’aide en origami.
 			</p>
 		</div>
+		</div>
+			</div>
 		<div class="col col-6">
+			<div class="card">
+				<div class="card-title">
 			<p>
 				Public Cible
 Enfants entre 3 et 5 ans
@@ -63,19 +79,27 @@ Environ 1h30
 50€
 
 			</p>
+			</div>
+			</div>
 		</div>
 	</div>
 
 	<div class="row">
 		<div class="col col-6">
+			<div class="card">
+				<div class="card-body">
 			<p>Sténopé 
 
 Description
 
 Création avec un groupe, d’un sténopé grandeur nature. Les enfants seront sollicités pour parvenir à créer un “casque” sténopé, à l’aide de cartons peints en noir et de scotch. Une fois fait, un petit trou percé dans le casque  laissera alors entrer l’image de la ville. 
 </p>
+</div>
+</div>
 		</div>
 		<div class="col col-6">
+			<div class="card">
+				<div class="card-body">
 			<p>
 				
 
@@ -99,6 +123,8 @@ Durée/Tarif
 	</div>
 	<div class="row">
 		<div class="col col-6">
+			<div class="card">
+				<div class="card-body">
 			<p>
 				Anthotype 
 Description
@@ -107,7 +133,11 @@ Faire découvrir le principe de la photographie dans son essence, à des enfants
 Toutes les activités à destination des enfants n’ont recours à aucun produit chimique, ni dangereux ! 
 			</p>
 			</div>
+		</div>
+	</div>
 			<div class="col col-6">
+				<div class="card">
+					<div class="card-body">
 				<p>
 					Infos
 Public Cible
@@ -136,6 +166,8 @@ Durée/Tarif
 	</div>
 	<div class="row">
 		<div class="col col-6">
+			<div class="card">
+				<div class="card-body">
 			<p>
 				Initiation au développement d’un négatif
  
@@ -145,7 +177,11 @@ Faire découvrir le développement argentique en laboratoire en pratiquant en pr
 Nous verrons ensemble comment préparer les chimies permettant le développement, comment ouvrir sa pellicule puis procéder au développement. Puis nous ferons ensemble une planche contacte afin d’avoir une version positive des images. 
 			</p>
 		</div>
+		</div>
+</div>
 		<div class="col col-6">
+			<div class="card">
+				<div class="card-body">
 			<p>
 				Infos
 Public Cible
@@ -167,8 +203,11 @@ Session de 2h30 – 75€
 			</p>
 		</div>
 	</div>
+</div>
 	<div class="row">
 		<div class="col col-6">
+			<div class="card">
+				<div class="card-body">
 			<p>
 				 Initiation au tirage argentique N&B
 Description
@@ -177,6 +216,8 @@ Faire découvrir le développement argentique en laboratoire en pratiquant le ti
 			</p>
 		</div>
 		<div class="col col-6">
+			<div class="card">
+				<div class="card-body">
 			<p>
 				Infos 
 Public Cible
