--- a/app/views/static_pages/espace_pro.html.erb
+++ b/app/views/static_pages/espace_pro.html.erb
@@ -1,3 +1,4 @@
+<div class=" container mt-5">
 <h1>TARIFS</h1>
 
 <h2>ARGENTIQUE</h2>
@@ -6,3 +7,4 @@ Argentique 3 pellicules (environ 100 photos) + 3 planches contact + 15 tirages 1
 
 Numérique FAMILLE, MATERNITE, COUPLE, BOOK… Numérique FAMILLE, MATERNITE, COUPLE, BOOK… Numérique MARIAGE Numérique MARIAGE Première rencontre + la séance dure environ 3h, je vous accompagne dans votre vie quotidienne ou dans le(s) lieu(x) de votre choix + toutes les photos + sélection de 150 images travaillées Première rencontre + la séance dure environ 6h, je vous accompagne dans votre vie quotidienne ou dans le(s) lieu(x) de votre choix + toutes les photos + sélection de 200 images travaillées Première rencontre + Toute la journée, je vous accompagne pendant les préparatifs, la cérémonie et l’après cérémonie + toutes les photos + sélection 300 images travaillées Première rencontre + Toute la journée, je vous accompagne pendant les préparatifs, la cérémonie, l’après cérémonie et durant toute la soirée + toutes les photos + sélection 350 images travaillées 350€ 500€ 950€ 1200€ Possibilité de demande « à la carte », nous discutons ensemble de ce que vous souhaitez, de ce qui est possible, et nous ajustons pour que l’expérience soit la plus proche de vos attentes et de votre budget.
 </p>
+</div>
