--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -1,15 +1,18 @@
 
-<header>
+<!-- <header>
 	<nav>
 		<h3 id="logo">Noémie Blumet Photo</h3>
 	</nav>
-	<section>
-		<div class="test">
-		<%= image_tag("photo.JPG", width: '1000px', class: "center")%>
-	</div>
-	</section>
+	<section> -->
+		<div class="row">
+			<div class="col col-12">
+				<%= image_tag("photo_cropped.JPG", class: "center img-fluid", id: "home-img")%>
+				<h1 id="title">NOÉMIE BLUMET PHOTO</h1>
+			</div>
+		</div>
+<!-- 	</section>
 </header>
 
-<div class="slider"></div>
+<div class="slide -->
 
 
