--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -15,40 +15,16 @@
  */
 
 
-.photo {
-	height: 100px;
-	width: auto;
-}
-
-.container-fluid {
-	padding-left: 0rem;
-	padding-right: 0rem;
-	overflow: hidden;
-}
-
-.center {
-	display: block;
-  	margin-left: auto;
-  	margin-right: auto;
-  	width: 50%;
-}
-
-.parallax {
-	background-attachment: fixed;
-  	background-position: center;
-  	background-repeat: no-repeat;
-  	background-size: cover;
-}
 
 
 
-*{
+/**{
 	margin: 0;
 	padding: 0;
 	box-sizing: border-box;
-}
+}*/
 
-.slider {
+/*.slider {
 	position: absolute;
 	top: 0;
 	left: 0;
@@ -56,9 +32,9 @@
 	height: 100vh;
 	background: linear-gradient(to left, #575554, black );
 	z-index: -1;
-}
+}*/
 
-nav{
+/*nav{
 	display: grid;
 	min-height: 10vh;
 }
@@ -69,24 +45,5 @@ section{
 	justify-content: center;
 	align-items: center;
 }
+*/
 
-.test{
-	height: 100%;
-	width: 100%;
-}
-
-.test img{
-	width: 100%;
-	height: 100%;
-}
-
-/*.test::after {
-	content: "";
-	background: black;
-	width: 100%;
-	height: 100%;
-	position: absolute;
-	left: 0;
-	top: 0;
-	opacity: 0;
-}*/
