--- a/app/views/layouts/_navbar.html.erb
+++ b/app/views/layouts/_navbar.html.erb
@@ -1,5 +1,18 @@
-<nav class="navbar navbar-expand-lg navbar-dark bg-primary">
-  <%= link_to "Noémie Photo", root_path, class: "navbar-brand" %>
+<% if false %>
+<div id="menu">
+  <div id="logo">
+   <h1> <%= link_to "NOÉMIE BLUMET PHOTO", root_path%></h1>
+  </div>
+
+
+</div>
+<%end%>
+
+
+
+
+<nav class="navbar navbar-expand-lg ">
+  <%= link_to "Noémie Photo", root_path, class: "navbar-brand", style: "color:white;" %>
 
   <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarColor01" aria-controls="navbarColor01" aria-expanded="false" aria-label="Toggle navigation">
     <span class="navbar-toggler-icon"></span>
@@ -7,7 +20,7 @@
 
   <div class="collapse navbar-collapse" id="navbarColor01">
     <ul class="navbar-nav mr-auto">
-      <li class="nav-item active">
+      <li class="nav-item active color">
 
         <%= link_to "Qui suis-je ?", static_pages_about_me_path, class: "nav-link" %>
       </li>
@@ -21,7 +34,16 @@
       <li class="nav-item">
         <%= link_to "Ateliers photo", static_pages_courses_path, class: "nav-link" %>
       </li>
+
+      <% if user_signed_in? %>
+      <li class="nav-item">
+      <%= link_to "Déconnexion", destroy_user_session_path, method: 'delete',  class: "nav-link" %>
+    </li>
+    <%end %>
     </ul>
 
   </div>
 </nav>
+
+
+
