--- a/app/views/static_pages/courses.html.erb
+++ b/app/views/static_pages/courses.html.erb
@@ -1,4 +1,25 @@
-<div class="div container">
+<% if user_signed_in? %>			
+	<div class="new-article">
+		<%= link_to '+', new_article_path(:user_id), :style => 'color = #FFFFFF;' %>
+	</div>
+<%end%>
+
+<div class="container mt-5">
+	<% @article.each do |article| %>
+		<div class="card mb-5">
+			<div class="card-title">
+				<%= article.title %>
+			</div>
+			<div class="card-body">
+				<%= article.body %>
+			</div>
+			<% if user_signed_in? %>
+			<%= link_to 'éditer', edit_article_path(article.id) %>
+			<%end%>
+		</div>
+	<%end %>
+</div>
+<!-- <div class="div container">
 	<div class="row">
 		<div class="col col-12">
 	<h1>COURS ET ATELIERS
@@ -240,4 +261,4 @@ Session de 2h30
 			</p>
 		</div>
 	</div>
-</div>	
+</div>	 -->
