test in progress for tabs

--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -1,17 +1,5 @@
 <footer>
-	<div id="footer">
-		<div class="row ">
-			<div class="col text-dark text-center ">
-				<i class="fab fa-twitter-square"></i>
-				<i class="fab fa-facebook ml-2"></i>
-				<i class="fab fa-instagram ml-2"></i>
-				<i class="fab fa-pinterest-square ml-2"></i>
-			</div>
-		</div>
-		<div class="row">
-			<div class="col ">
-				<p class="mt-4 text-center" id="country"><i class="fas fa-globe"></i>  FRANCE</p>
-			</div>
-		</div>
+	<div class="footer ">
+	lalala
 	</div>
 </footer>
