--- a/app/assets/stylesheets/custom.css
+++ b/app/assets/stylesheets/custom.css
@@ -1,4 +1,6 @@
-
+html, body{
+	height: 100%;
+}
 
 .container-fluid {
 	padding-left: 0rem;
@@ -14,11 +16,11 @@
   	width: 50%;
 }
 
-*{
+/**{
 	margin: 0;
 	padding: 0;
 	box-sizing: border-box;
-}
+}*/
 
 .slider {
 	position: absolute;
@@ -109,10 +111,20 @@ h2 {
 	transform: translateX(-50%) translateY(-50%);
 }
 
-#footer{
+body {
+  display: flex;
+  flex-direction: column;
+}
+.content {
+  flex: 1 0 auto;
+}
+.footer {
 	background-color: black;
-	width: 100%;
-	height: 5rem;
+  	min-height: 80px;
+  	position: fixed;
+  	left: 0;
+  	bottom: 0;
+  	width: 100%;
 }
 
 
