--- a/app/views/layouts/_navbar.html.erb
+++ b/app/views/layouts/_navbar.html.erb
@@ -1,15 +1,3 @@
-<% if false %>
-<div id="menu">
-  <div id="logo">
-   <h1> <%= link_to "NOÉMIE BLUMET PHOTO", root_path%></h1>
-  </div>
-
-
-</div>
-<%end%>
-
-
-
 
 <nav class="navbar navbar-expand-lg ">
   <%= link_to "Noémie Photo", root_path, class: "navbar-brand", style: "color:white;" %>
@@ -35,11 +23,21 @@
         <%= link_to "Ateliers photo", static_pages_courses_path, class: "nav-link" %>
       </li>
 
-      <% if user_signed_in? %>
+
+ <% if user_signed_in? %>
+
       <li class="nav-item">
-      <%= link_to "Déconnexion", destroy_user_session_path, method: 'delete',  class: "nav-link" %>
+      <%= link_to "Déconnexion", destroy_user_session_path, method: :delete,  class: "nav-link" %>
     </li>
-    <%end %>
+
+    <% else %>
+
+         <li class="nav-item">
+      <%= link_to "Connexion", new_user_session_path, class: "nav-link" %>
+    </li>
+
+<% end %>
+
     </ul>
 
   </div>
