--- a/app/views/static_pages/expo.html.erb
+++ b/app/views/static_pages/expo.html.erb
@@ -19,34 +19,42 @@
 
 <div class="container">
 		 <ul class ="nav nav-tabs">
-      		<li class="active"><a data-toggle="tab" href="#home">Home</a></li>
-    <li><a data-toggle="tab" href="#menu1">Menu 1</a></li>
-    <li><a data-toggle="tab" href="#menu2">Menu 2</a></li>
-    <li><a data-toggle="tab" href="#menu3">Menu 3</a></li>
+      		<li class="active nav-item"><a data-toggle="tab" href="#home">Home</a></li>
+      		<% @category.each do |cat| %>
+    <li class="nav-item " ><a class="iterator" data-toggle="tab" href="#menu"><%= cat.name%></a></li>
+
+<% end %>
+
   </ul>
 
 <div class="tab-content">
-    <div id="home" class="tab-pane fade in active">
-      <h3>HOME</h3>
-      <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
-    </div>
+
     <div id="menu1" class="tab-pane fade">
-      <h3>Menu 1</h3>
+      <h3 class="mt-5">Blog</h3>
     <p> <% @category.find_by(name: "blog").images.each do |image| %>
      	<%=image_tag(image, :style => "height: 700px; width:auto;") %>
      <% end %>
  </p>
     </div>
     <div id="menu2" class="tab-pane fade">
-      <h3>Menu 2</h3>
+      <h3 class="mt-5">Grossesse</h3>
           <p> <% @category.find_by(name: "lalala").images.each do |image| %>
      	<%=image_tag(image, :style => "height: 700px; width:auto;") %>
      <% end %>
  </p>
     </div>
     <div id="menu3" class="tab-pane fade">
-      <h3>Menu 3</h3>
-      <p>Eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt explicabo.</p>
+      <h3 class="mt-5">Mariage</h3>
+       <p> <% @category.find_by(name: "test").images.each do |image| %>
+     	<%=image_tag(image, :style => "height: 700px; width:auto;") %>
+     <% end %>
     </div>
   </div>
 </div>
+<script>
+	var a = document.getElementsByClassName("iterator");
+	for (var i = 0; i < a.length; i++) {
+  a[i].href = "#menu"+`${i+1}`;
+  
+}
+</script>
