--- a/app/assets/stylesheets/custom.css
+++ b/app/assets/stylesheets/custom.css
@@ -1,26 +1,4 @@
-html, body{
-	height: 100%;
-}
 
-.container-fluid {
-	padding-left: 0rem;
-	padding-right: 0rem;
-	overflow: hidden;
-
-}
-
-.center {
-	display: block;
-  	margin-left: auto;
-  	margin-right: auto;
-  	width: 50%;
-}
-
-/**{
-	margin: 0;
-	padding: 0;
-	box-sizing: border-box;
-}*/
 
 .slider {
 	position: absolute;
@@ -50,16 +28,6 @@ section{
 }
 
 
-/*.test::after {
-	content: "";
-	background: black;
-	width: 100%;
-	height: 100%;
-	position: absolute;
-	left: 0;
-	top: 0;
-	opacity: 0;
-}*/
 
 p {
 	text-align: justify;
@@ -101,30 +69,18 @@ h2 {
 	
 }
 
-#title {
-	position: absolute;
-	background-color: inherit;
-	color: white;
-	font-size: 60px;
-	top: 50%;
-	left: 50%;
-	transform: translateX(-50%) translateY(-50%);
-}
 
-body {
-  display: flex;
-  flex-direction: column;
-}
 .content {
   flex: 1 0 auto;
 }
 .footer {
 	background-color: black;
-  	min-height: 80px;
+  	min-height:10vh;
   	position: fixed;
   	left: 0;
   	bottom: 0;
   	width: 100%;
+
 }
 
 
@@ -152,5 +108,48 @@ body {
   margin: 0;
   position: absolute;
   top: 100%;
+
+}
+
+#landing-title {
+	position: absolute;
+	top: 50%;
+	left: 50%;
+	transform: translateY(-50%);
+	transform: translateX(-50%);
+	color: white;
+}
+
+.landing-image-container{
+	display: grid;
+	height: 100%;
+}
+
+.landing-image {
+	width: 100%;
+    height: 99vh;
+    margin-right: -20px;
+    overflow: hidden;
+}
+
+
+.my-btn {
+	width:200px;
+	height: auto;
+
+}
+
+.my-btn-display {
+	display: block;
+	text-align: center;
+}
+
+.my-form {
+	text-align: center;
+}
+
+.my-menu {
+    margin: auto;
+
 
 }
