--- a/app/views/articles/index.html.erb
+++ b/app/views/articles/index.html.erb
@@ -1,17 +1,12 @@
-
-<%= link_to 'New article', new_article_path %>
-<p>
-  <strong>Title:</strong>
-  <% @articles.each do |article| %>
-  <%= article.title %>
-</p>
- 
-<p>
-  <strong>Text:</strong>
-  <%=article.body %>
-  <%= article.category %> 
-</p>
-
-
-<% end %>
- 
+<div class="container mt-5">
+	<% @articles.each do |article| %>
+		<div class="card mb-5">
+			<div class="card-title">
+				<%= article.title %>
+			</div>
+			<div class="card-body">
+				<%= article.body %>
+			</div>
+		</div>
+	<%end %>
+</div>
