--- a/app/views/articles/new.html.erb
+++ b/app/views/articles/new.html.erb
@@ -1,27 +1,34 @@
-<div class="container-fluid">
+<section>
+<div class="container">
     <div class="row">
-        <div class="col">
-            <h2>Créer un article</h2>
-        </div>
-    </div>
-    <div class="row">
-        <div class="col">
-                  <!-- Zone du formulaire -->
-                  <%= render 'articles/error_messages' %>
+        <div class="col offset-md-3 col-md-8 mx-auto text-dark">  
+          <%= render 'articles/error_messages' %>
 
+           <%= form_tag url_for(action: 'create'), method: "post", controller:"categories", class: "mt-4" do %>
+
+                 <%= label_tag 'Quel sera son titre ? ', nil, class: "font-weight-bold" %>
+                <%= text_field_tag 'name', nil, class: "" %>
+                  <%= submit_tag "Créer la nouvelle catégorie", class: "btn btn-primary mb-3 mt-3" %>
+            <% end %>
+
+                  <h2>Créer un article</h2>
+                  <!-- Zone du formulaire -->
                   <%= form_tag url_for(action: 'create'), method: "post", class: "mt-4" do %>
 
-                   <%= label_tag 'Quel sera son titre ? ', nil, class: "font-weight-bold" %>
-                  <%= text_field_tag 'titre', @article.title, class: "form-control" %>
+                   <%= label_tag 'Quel sera son titre ? ', nil, class: "font-weight-bold " %>
+                  <%= text_area_tag 'title', @article.title, class: "form-control" %>
 
-                  <%= label_tag 'Son contenu :', nil, class: "font-weight-bold " %>
-                  <%= text_area_tag 'body', @article.body, placeholder: "Écris ton article ici", class: "form-control"  %>
+                  <%= label_tag 'Son contenu :', nil, class: "font-weight-bold  " %>
+                  <%= text_area_tag 'body', @article.body, placeholder: "Écris ton article ici", class: "form-control"    %>
+
+
 
   				 <%= label_tag 'Sa catégorie :',nil, class: "font-weight-bold " %>
-            <%= text_area_tag 'category', @article.category, placeholder: "Blog, tarif, ateliers...", class: ""  %>
+            <%= select_tag 'category', options_from_collection_for_select(Category.all, :id, :name), class: "form-control", prompt: 'Catégorie' %>
 
     <%= submit_tag "Créer l'article", class: "btn btn-primary mb-3 mt-3" %>
         <%end %>
         </div>
     </div>
 </div>
+</section>
