--- a/app/views/categories/new.html.erb
+++ b/app/views/categories/new.html.erb
@@ -1,8 +1,15 @@
-<h1> Gestionnaire de catégories </h1>
+<h1 class="text-center"> Gestionnaire de catégories </h1>
+
+<div class="container">
+	<div class="row">
+		<div class="col col-12 text-center">
 
  <%= form_tag url_for(action: 'create'), method: "post", class: "mt-4" do %>
 
-                 <%= label_tag 'Quel sera son titre ? ', nil, class: "font-weight-bold" %>
-                <%= text_field_tag 'name', @category.name, class: "" %>
+              <h4 class="text-center">   <%= label_tag 'Quel sera son titre ? ', nil, class: "font-weight-bold" %> </h4>
+                <p class="text-center"><%= text_field_tag 'name', @category.name, class: "" %></p>
                   <%= submit_tag "Créer la nouvelle catégorie", class: "btn btn-primary mb-3 mt-3" %>
                 <% end %>
+            </div>
+        </div>
+	</div>
