--- a/app/views/layouts/_navbar.html.erb
+++ b/app/views/layouts/_navbar.html.erb
@@ -4,43 +4,50 @@
 
   <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarColor01" aria-controls="navbarColor01" aria-expanded="false" aria-label="Toggle navigation">
     <span class="navbar-toggler-icon"></span>
-  </button>
+</button>
 
-  <div class="collapse navbar-collapse" id="navbarColor01">
+<div class="collapse navbar-collapse" id="navbarColor01">
     <ul class="navbar-nav mr-auto">
       <li class="nav-item active color">
 
         <%= link_to "Qui suis-je ?", static_pages_about_me_path, class: "nav-link" %>
-      </li>
-      <li class="nav-item">
+    </li>
+    <li class="nav-item">
         <%= link_to "Espace Pro", static_pages_espace_pro_path, class: "nav-link" %>
 
-      </li>
-      <li class="nav-item">
+    </li>
+    <li class="nav-item">
         <%= link_to "Expo", static_pages_expo_path, class: "nav-link" %>
-      </li>
-      <li class="nav-item">
-        <%= link_to "Ateliers photo", static_pages_courses_path, class: "nav-link" %>
-      </li>
+    </li>
+    <li class="nav-item">
+        <%= link_to "Ateliers photo", articles_path, class: "nav-link" %>
+    </li>
 
 
- <% if user_signed_in? %>
+    <% if user_signed_in? %>
 
-      <li class="nav-item">
+    <li class="nav-item">
       <%= link_to "Déconnexion", destroy_user_session_path, method: :delete,  class: "nav-link" %>
-    </li>
+  </li>
 
-    <% else %>
+  <% else %>
 
-         <li class="nav-item">
+  <li class="nav-item">
       <%= link_to "Connexion", new_user_session_path, class: "nav-link" %>
-    </li>
+  </li>
 
 <% end %>
 
-    </ul>
+  <% if user_signed_in? && current_user.id_admin == true %>
+  <li class="nav-item">
+      <%= link_to "Admin", admins_root_path, class: "nav-link" %>
+  </li>
+  
+  <% end %>
 
-  </div>
+</ul>
+
+</div>
 </nav>
 
 
