--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,30 +1,27 @@
 
 
 
-<h1>Page Profil</h1>
-
-<h3>Changer d'avatar ?</h3>
-<%= form_tag user_photos_path(@user), multipart: true do %>
-  <%= file_field_tag :photos %>
-  <%= submit_tag "mettre à jour" %>
+<%= form_tag category_images_path(:category_id), multipart: true do %>
+  <%= file_field_tag :images %>
+  <%= submit_tag "Ajouter photo" %>
 <% end %>
 
-<p>Bienvenue sur la page d'ajout d'un avatar pour le User portant l'id : <%=@user.id%></p>
-<h3>Avatar actuel</h3>
 
 
-  <%@user.photos.each do |photo| %>
-  <%= image_tag(photo, :style => "height: 700px; width:auto;") %> 
+  <%@categories.each do |cat| %>
+    <%= cat.name %>
+    <% cat.images.each do|image| %>
+  <%= image_tag(image, :style => "height: 700px; width:auto;") %> 
   <%= link_to 'Delete', 
-             user_delete_image_attachment_url(@user, photo.id), 
-                         method: :delete, 
-                         data: { confirm: 'Are you sure?', :user_id => @user.id }
+             category_delete_image_attachment_url(cat, image.id), 
+                         method: :delete,  class: "btn",
+                         data: { confirm: 'Are you sure?'}
                           %> 
 
+  <br><br><br><br><br><br><br>
+
+  <br><br><br><br><br><br><br>
+  <br><br><br><br><br><br><br>
+  <br><br><br><br><br><br><br>
   <%end%>
-
-
-
-
-
-
+  <%end %>
