--- a/app/views/admins/index.html.erb
+++ b/app/views/admins/index.html.erb
@@ -2,18 +2,20 @@
 
 
   <!-- Website activity -->
+                <div class="container">
                     <div class="row mt-4">
-                        <div class="col">
-                            <h4 class="p-2 bg-primary-alt"><i class="fas fa-info-circle text-primary"></i> Activité du site</h4>
+                        <div class="col-6">
+                            <h4 class="bg-primary-alt"><i class="fas fa-info-circle text-primary"></i> Activité du site</h4>
                         </div>
                     </div>
                     <div class="row ">
-                        <div class="col">
+                        <div class="col-6">
                             <h3 class="mb-1 ml-2"><%= @total_articles %></h3>
                             <p class="ml-2">articles sont en ligne</p>
                         </div>
-                        <div class="col">
+                        <div class="col-6">
                             <h3 class="mb-1"><%= @total_categories  %></h3>
                             <p>catégories existent</p>
                         </div>
                     </div>
+    </div>
