--- a/app/views/admins/articles/index.html.erb
+++ b/app/views/admins/articles/index.html.erb
@@ -1,22 +1,23 @@
 <div class="row">
-	<div class="col">
-		<%= link_to 'Créer un nouvel article', new_admins_article_path %>
+	<div class="col ml-5">
+		<%= link_to '+', new_admins_article_path, style:"font-size:50px;" %>
 	</div>
 </div>
 
-<div class="row">
-	<div class="col">
-		<% @articles.each do |article| %>
-		<div class="card">
-			<div class="card-body">
-				<h3 class="card-title"> <%= article.title %> </h3>
-				<p class="card-text"> <%= article.body %> </p>
-				<p><%= article.category %></p>
-				<%= link_to "Supprimer l'article", admins_article_path(article.id), method: 'delete' %>
-				<%= link_to "Éditer l'article", edit_admins_article_path(article.id) %>
+<div class="container">
+	<% @articles.each do |article| %>
+		<div class="row">
+			<div class="col col-12">
+				<div class="card ml-5 mr-5 mb-5">
+					<div class="card-body">
+						<h3 class="card-title"> <%= article.title %> </h3>
+						<p class="card-text"> <%= article.body %> </p>
+						<p><%= article.category %></p>
+						<button class="btn btn-danger"><%= link_to "Supprimer", admins_article_path(article.id), method: 'delete' %> </button>
+						<button class="btn btn-info"><%= link_to "Éditer", edit_admins_article_path(article.id) %> </button>
+					</div>
+				</div>
 			</div>
-		</div>
-		<% end %>
-	</div>
+		</div>		
+	<% end %>
 </div>
-
