--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -1,5 +1,26 @@
-<footer>
-	<div class="footer ">
-	lalala
-	</div>
-</footer>
+<!-- Footer -->
+		<footer class="footer mt-5">
+			<div class="container-fluid">
+				<div class="row pt-4">
+					<div class="col col-4 text-dark"> 
+
+					</div>
+					<div class="col col-4 text-dark text-center">
+						<i class="fab fa-twitter-square"></i>
+						<i class="fab fa-facebook ml-2"></i>
+						<i class="fab fa-instagram ml-2"></i>
+						<i class="fab fa-pinterest-square ml-2"></i>
+					</div>
+					<div class="col col-4 text-right pr-5">
+					</div>
+				</div>
+			</div>
+			<div class="container mt-5 pb-3">
+				<div class="row" style="border-top: 1px solid #7C978A;">    
+					<div class="col col-12 text-center info"> Noemieblumet@gmail.com</div>
+					<div class="col col-12 text-center info"> 06.49.51.51.90 </div>
+				</div>
+			</div>
+
+
+		</footer>
