--- a/app/views/static_pages/about_me.html.erb
+++ b/app/views/static_pages/about_me.html.erb
@@ -1,12 +1,15 @@
-<% if user_signed_in? %>
-	<%= current_user.email %>
-<% end %>
+<div class="container mt-5 mb-5">
+	<h1>Qui suis-je</h1>
 
-<div class="container mt-5">
-<h1>Qui suis-je</h1>
+	<div class="row">
+		<div class="col col-3">
+			<%= image_tag "profil.jpg",class:"mt-5", style:"width: 200px";%>
+		</div>
+		<div class="col col-9">
+			<p class="mt-5" style="line-height: 2; font-size:16px;">
+			Je me souviens des appareils photo jetables quand on partait en vacances, et du plaisir et de l’excitation que c’était de revoir ces images, plus ou moins réussies mais toujours émouvantes. Je me souviens de l’album photo de mes années d’enfance, soigneusement confectionné par ma mère, que je feuilletais régulièrement sans me reconnaitre sur le papier pour garder en mémoire ces moments quotidiens figés. Je me souviens d’une boite, retrouver au fond d’un placard, pleine de vieux tirages argentiques en noir et blanc. Ce sera la photographie ! Curieuse et passionnée d’images sous toutes ses formes, j’adopte la technique photographique comme un moyen de créer. Mélanger les genres, apprendre de nouvelles choses, aller vers l’inconnu pour parvenir à atteindre l’esthétique et l’émotion la plus juste possible. Partager et transmettre cette possibilité de créer et de s’exprimer est Photographe polyvalente et active j’aime changer d’air et faire plusieurs types de photographie. J’ai besoin de rencontres, de partage, de diversité, j’en ai besoin. J’aime raconter l’histoire de ces rencontres. Que ce soit pour s’imprégner du temps qui passe ou pour se rappeler l’émotion d’un moment, j’aime voir sur mes images la beauté d’une relation, d’un lieu, d’un instant. Un moment précieux et intime tel que l’arrivée d’un bébé, un mariage, ou le bonheur de se retrouver en famille mérite toutes les attentions. Tout en me faisant discrète, je serais près de vous, heureuse de partager ces moments avec vous, m’engageant à photographier spontanément et honnêtement tout ce bonheur.
+			</p>
+		</div>
+	</div>
 
-
-<p class="mt-5" style="line-height: 2; font-size:16px;">
-Je me souviens des appareils photo jetables quand on partait en vacances, et du plaisir et de l’excitation que c’était de revoir ces images, plus ou moins réussies mais toujours émouvantes. Je me souviens de l’album photo de mes années d’enfance, soigneusement confectionné par ma mère, que je feuilletais régulièrement sans me reconnaitre sur le papier pour garder en mémoire ces moments quotidiens figés. Je me souviens d’une boite, retrouver au fond d’un placard, pleine de vieux tirages argentiques en noir et blanc. Ce sera la photographie ! Curieuse et passionnée d’images sous toutes ses formes, j’adopte la technique photographique comme un moyen de créer. Mélanger les genres, apprendre de nouvelles choses, aller vers l’inconnu pour parvenir à atteindre l’esthétique et l’émotion la plus juste possible. Partager et transmettre cette possibilité de créer et de s’exprimer est Photographe polyvalente et active j’aime changer d’air et faire plusieurs types de photographie. J’ai besoin de rencontres, de partage, de diversité, j’en ai besoin. J’aime raconter l’histoire de ces rencontres. Que ce soit pour s’imprégner du temps qui passe ou pour se rappeler l’émotion d’un moment, j’aime voir sur mes images la beauté d’une relation, d’un lieu, d’un instant. Un moment précieux et intime tel que l’arrivée d’un bébé, un mariage, ou le bonheur de se retrouver en famille mérite toutes les attentions. Tout en me faisant discrète, je serais près de vous, heureuse de partager ces moments avec vous, m’engageant à photographier spontanément et honnêtement tout ce bonheur.
-</p>
 </div>
