--- a/app/views/static_pages/expo.html.erb
+++ b/app/views/static_pages/expo.html.erb
@@ -1,31 +1,46 @@
-<div class="container ">
-		 <ul class ="nav nav-tabs my-menu ">
-      		<!-- <h5><li class="active nav-item"><a data-toggle="tab" href="#home">Toutes</a></li></h5> -->
-      		<% @category.each do |cat| %>
-    <h5><li class="nav-item mt-3 " ><a class="iterator " data-toggle="tab" href="#menu"><%= cat.name%></a></li></h5>
-
-<% end %>
-
-  </ul>
-
-  <div class="tab-content">
-        <% @category.each do |cat| %>
-        <div id ="" class ="tab-pane fade image">
-        <h3 class="mt-5"><%=cat.name%></h3>
+<div class="section mb-5 test1">
+    <div class="container-fluid">
         <div class="row">
-          <p> <% cat.images.each do |image| %>
-            <div class="col col-6">
-            <%= image_tag(image, :style => "max-width: 200px; height:auto;") %>
-          </div>
-              <% end %>)
-              </div>
-              </div>
-         </p>
-      <% end %>
-  
-  </div>
+            <div class="col col-12">
+                <ul class ="nav nav-tabs my-menu justify-content-center">
+                    <% @category.each do |cat| %>
+                        <li class="nav-item mt-3" ><a class="iterator " data-toggle="tab" href="#menu"><%= cat.name%></a>
+                        </li>
+                    <% end %>
+                </ul>
+            </div>
+        </div>
+        <div class="col col-12">
+            <p class="mt-5"> LE DORMEUR DU VAL, DE LA BITE <br>
+            Il était une fois un bite, qui était grosse et petite à la fois...</p> 
+            <p> LE DORMEUR DU VAL, DE LA BITE <br>
+            Il était une fois un bite, qui était grosse et petite à la fois...</p> 
+            <p> LE DORMEUR DU VAL, DE LA BITE <br>
+            Il était une fois un bite, qui était grosse et petite à la fois...</p> 
+            <p class="mb-5"> LE DORMEUR DU VAL, DE LA BITE <br>
+            Il était une fois un bite, qui était grosse et petite à la fois...</p> 
+        </div>
+
+        <div class="row ">
+            <div class="col col-12">
+                <div class="tab-content">
+                    <% @category.each do |cat| %>
+                        <div id ="" class ="tab-pane fade image ">
+                            <h3 class="mt-5 text-center"><%=cat.name%></h3>
+                            <div class="flex">
+
+                                <% cat.images.each do |image| %>
+                                    <%= image_tag(image, :style => "max-width: 400px; max-height:400px;", class:"mt-1 ml-1 mb-1 mr-1 d-block w-100") %>
+                                <% end %>
+                            </div>
+                        </div>
+                    <% end %>
+                </div>
+            </div>
+        </div>
+    </div>
 </div>
- 
+
 
 
 
@@ -33,18 +48,15 @@
 <script>
 	var a = document.getElementsByClassName("iterator");
 	for (var i = 0; i < a.length; i++) {
-  a[i].href = "#menu"+`${i+1}`;
-  
-}
+        a[i].href = "#menu"+`${i+1}`;
+    }
 
     var b = document.getElementsByClassName("image");
-    
+
     for (var e = 0; e <b.length; e++) {
-     console.log(b[e]);
      b[e].id = "menu" + (e + 1); 
-      // = ('' + `${e+1}`);
-    }
+ }
 </script>
 
 
-  
+
